# turing-deinterleaving-challenge

./: .copier-answers.yml  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Technical Annex.md  Technical_Annex.md  pyproject.toml  requirements.txt  requirements_dev.txt
examples/: demo.ipynb  identity_model.ipynb
src/turing_deinterleaving_challenge/: __init__.py  data.py
src/turing_deinterleaving_challenge/data/: __init__.py  dataset.py  load.py  structure.py
src/turing_deinterleaving_challenge/models/: __init__.py  evaluate.py  model.py  utils.py
src/turing_deinterleaving_challenge/visualisation/: __init__.py  visualisations.py
