[build-system]
    requires = ["hatchling", "hatch-requirements-txt"]
    build-backend = "hatchling.build"

[tool.hatch.metadata]
    allow-direct-references = true

[project]
    name = "turing-deinterleaving-challenge"
    version = "1.3.0"
    authors = [
      { name = "Edward Gunn", email = "egunn@turing.ac.uk" },
      { name = "Ian Groves", email = "igroves@turing.ac.uk" },
      { name = "Robert Jones", email = "rjones@turing.ac.uk" },
      { name = "Leo Zeitler", email = "lzeitler@turing.ac.uk" },
    ]
    description = "The Turing Deinterleaving Challenge (TDC) aims to provide the radar research community with a unified benchmark and dataset, fulfilling the need for data and model comparison"
    readme = "README.md"
    requires-python = ">=3.10"

[tool.hatch.metadata.hooks.requirements_txt]
    files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
    dev = ["requirements_dev.txt"]
    demo = ["requirements_demo.txt"]

[project.urls]
Homepage = "https://github.com/egunn-turing/turing-deinterleaving-challenge"
"Bug Tracker" = "https://github.com/egunn-turing/turing-deinterleaving-challenge/issues"
Discussions = "https://github.com/egunn-turing/turing-deinterleaving-challenge/discussions"
Changelog = "https://github.com/egunn-turing/turing-deinterleaving-challenge/releases"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["turing_deinterleaving_challenge"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.11"
show_error_codes = true
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict = false


[tool.ruff]
src = ["src"]
exclude = []
line-length = 88  # how long you want lines to be

[tool.ruff.format]
docstring-code-format = true  # code snippets in docstrings will be formatted

[tool.ruff.lint]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
]
ignore = [
  "PLR",    # Design related pylint codes
  "ISC001", # Conflicts with formatter
]
unfixable = [
  "F401",   # Would remove unused imports
  "F841",   # Would remove unused variables
]
flake8-unused-arguments.ignore-variadic-names = true  # allow unused *args/**kwargsisort.required-imports = ["from __future__ import annotations"]
